<resources>
    <string name="app_name">XCritical</string>
    <string name="log_image">image log</string>
    <string name="forgot_pas"><u>Забыли пароль?</u></string>
    <string name="input_password">Введите пароль</string>
    <string name="input_password_error">Введите пароль</string>
    <string name="input_email">Введите E-mail</string>
    <string name="input_email_error">Введите e-mail</string>
    <string name="button_sign_in">Войти</string>
    <string name="button_registration">Зарегестрироваться</string>
    <string name="email_text">E-mail</string>
    <string name="password_text">Пароль</string>
    <string name="rc_title_name">Headline</string>
    <string name="rc_content">Lorem ipsum dolor sit amet...</string>
    <string name="rc_date">09.12.2021</string>
    <string name="gridfour">gridfour</string>
    <string name="list">list</string>
    <string name="refresh">refresh</string>
    <string name="chat">chat</string>
    <string name="bell">Уведомления</string>
    <string name="help">Связаться с поддержкой</string>
    <string name="info">О приложении</string>
    <string name="settings">Настройки</string>
    <string name="subscribe">Pro подписка</string>
    <string name="signout">Выйти</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scenarioText">Текст сценария</string>
    <string name="save">Сохранить</string>
    <string name="titleName">Заголовок</string>
</resources>