<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn= "navigation_view">
    <item
        android:title="">
        <menu>
            <item
                android:title="@string/info"
                android:id="@+id/info"
                android:icon="@drawable/ic_info"/>
            <item
                android:title="@string/help"
                android:id="@+id/help"
                android:icon="@drawable/ic_chat"/>
            <item
                android:title="@string/bell"
                android:id="@+id/bell"
                android:icon="@drawable/ic_bell"/>
            <item
                android:title="@string/subscribe"
                android:id="@+id/subscribe"
                android:icon="@drawable/ic_tag"/>
            <item
                android:title="@string/settings"
                android:id="@+id/settings"
                android:icon="@drawable/ic_settings"/>
            <item
                android:title="@string/signout"
                android:id="@+id/signout"
                android:icon="@drawable/ic_signout"/>
        </menu>
    </item>

</menu>