<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/list_item"
        android:icon="@drawable/ic_list"
        android:title="@string/list"
        app:showAsAction="always" />
    <item
        android:title="@string/refresh"
        android:icon="@drawable/ic_refresh"
        android:id="@+id/refresh_item"
        app:showAsAction="always"/>
    <item
        android:title="@string/chat"
        android:icon="@drawable/ic_chat"
        android:id="@+id/chat_item"
        app:showAsAction="always"/>
    <item
        android:title="@string/gridfour"
        android:icon="@drawable/ic_gridfour"
        android:id="@+id/gridfour_item"
        app:showAsAction="always"/>

</menu>