<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    android:contentDescription="@string/log_image"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="142dp"
        android:layout_marginLeft="142dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="142dp"
        android:layout_marginRight="142dp"
        android:contentDescription="@string/log_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_frame" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="432dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:text="@string/email_text"
                android:textColor="@color/text_color_light"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/white"
                android:cursorVisible="true"
                android:ems="10"
                android:hint="@string/input_email"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="false"
                android:singleLine="false"
                android:textColor="@color/white"
                android:textColorHint="@color/text_color_dark"
                android:textSize="16sp"
                android:visibility="visible"
                tools:visibility="visible" />

            <TextView
                android:textColor="@color/red"
                android:id="@+id/incorrect_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:text="@string/password_text"
                android:textColor="@color/text_color_light"
                android:textColorHint="@color/white"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:hint="@string/input_password"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/text_color_dark" />

            <TextView
                android:id="@+id/incorrect_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:text="" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="194dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/forgot_pas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:height="40dp"
                android:clickable="false"
                android:gravity="center"
                android:text="@string/forgot_pas"
                android:textColor="@color/forgot_pass"

                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_password" />

            <Button
                android:onClick="incorrectData"
                android:id="@+id/button_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_sign_in"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:backgroundTint="@color/button_sign_in" />

            <Button
                android:id="@+id/button_registration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_registration"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:backgroundTint="@color/button_registration" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>